Fix loading indicator display, also place correctly on mobile

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -72,6 +72,14 @@ body {
 }
 
 // Ajax loading indicator
+.loading-indicator-wrapper {
+  display:none;
+  position:absolute;
+  top:0;
+  right:0;
+  width:40px;
+  height:5px;
+}
 .loading-indicator {
   position:relative;
   width:40px;
